samples/_failures_safe/1761272615_a2bf0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f79f8a8.c: In function ‘print_menu’:
./samples/SAFE/__tmp_2f79f8a8.c:155:12: error: missing terminating " character
  155 |     printf("4
      |            ^~
./samples/SAFE/__tmp_2f79f8a8.c:155:5: error: expected expression at end of input
  155 |     printf("4
      |     ^~~~~~
./samples/SAFE/__tmp_2f79f8a8.c:155:5: error: expected declaration or statement at end of input
